# pymmcore-plus

./: .github_changelog_generator  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  404.html  CHANGELOG.md  LICENSE  README.md  cam.py  codecov.yml  config_groups.py  example.py  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml  seq.py  setup.cfg  setup.py  sitemap.xml  snap.py  x.py  y.py
.github/workflows/: ci.yml  docs.yml  test_and_deploy.yml
api/cmmcoreplus/: index.html
api/configuration/: index.html
api/constants/: index.html
api/device/: index.html
api/events/: index.html
api/mda/: index.html
api/metadata/: index.html
api/unicore/: index.html
api/utils/: index.html
cli/: index.html
contributing/: index.html
docs/: Makefile  _hooks.py  cli.md  conf.py  contributing.md  env_var.md  index.md  install.md  installing.md  metadata.md  profiling.md  trableshooting.md  troubleshooting.md
docs/api/: cmmcoreplus.md  configuration.md  constants.md  device.md  device_property.md  events.md  install_cli.md  mda.md  metadata.md  unicore.md  utils.md
docs/dev/: runner-architecture-analysis.md  runner-architecture.md  runner-implementation-plan.md
docs/examples/: context-set.md  following_changes_in_core.md  integration-with-qt.md  mda.md  mock-sample.md  napari-micromanager.md  pycro-manager-api.md
docs/guides/: conditional_events.md  custom_engine.md  event_driven_acquisition.md  events.md  ipython_completion.md  logging.md  mda_engine.md  migrating_pycro.md  pycromanager_migration.md  unicore.md
docs/stylesheets/: extra.css
env_var/: index.html
examples/: basic_client.py  client_starts_server.py  consumer_dispatch.py  demo_config.cfg  event_driven_acquisition.py  img_sequence_mda.py  mock_sample.py  napari.py  ome_handler_mda.py  ome_tiff_mda.py  ome_writer_handler_mda.py  pixel_calibration.py  properties_and_state_events.py  pycro-api.py  qt_integration.py  run_mda.py  runner_writer.py  set_as_context.py  simple_tiff_mda.py  simulate_benchmark.py  simulate_sample.py  tensorstore_mda.py  tiff_sequence_mda.py  unicore.py  unicore_camera.py  unicore_hamamatsu.py  unicore_hamamatsu_ham.py  zarr_mda.py
examples/context-set/: index.html
examples/following_changes_in_core/: index.html
examples/integration-with-qt/: index.html
examples/mda/: index.html
examples/napari-micromanager/: index.html
examples/pycro-manager-api/: index.html
guides/custom_engine/: index.html
guides/event_driven_acquisition/: index.html
guides/events/: index.html
guides/ipython_completion/: index.html
guides/logging/: index.html
guides/mda_engine/: index.html
guides/unicore/: index.html
install/: index.html
metadata/: index.html
profiling/: index.html
pymmcore_plus/: __init__.py  _client.py  _client.pyi  _logger.py  _mmcore_plus.py  _pyrocore.py  _serialize.py  _server.py  _signals.py  _util.py  install.py
pymmcore_plus/_tests/: conftest.py  test_callbacks.py  test_client.py  test_core.py  test_device_class.py  test_events.py  test_mda.py  test_property_class.py  test_serialize.py  test_server.py  test_writers.py
pymmcore_plus/client/: _client.py  _client.pyi
pymmcore_plus/client/callbacks/: __init__.py  basic.py  qcallback.py
pymmcore_plus/core/: __init__.py  _config.py  _constants.py  _device.py  _metadata.py  _mmcore_plus.py  _mmcore_plus.pyi  _property.py  _signals.py
pymmcore_plus/core/_signals/: __init__.py
pymmcore_plus/core/events/: __init__.py  _device_signal_view.py  _prop_event_mixin.py  _protocol.py  _psygnal.py  _qsignals.py  qcallback.py
pymmcore_plus/mda/: __init__.py  _engine.py  _protocol.py  _runner.py  _writer.py
pymmcore_plus/mda/events/: __init__.py  (+1 more)
pymmcore_plus/mda_writers/: __init__.py  _writers.py
pymmcore_plus/remote/: __init__.py  _serialize.py  _util.py
pymmcore_plus/server/: __init__.py  __main__.py  _pyrocore.py  _pyrocore.pyi  _server.py
pymmcore_remote/: __init__.py  _client.py  _mmcore_plus.py  _pyrocore.py  _qcallbacks.py  _serialize.py  _server.py  _util.py  qcallbacks.py
pymmcore_remote/_tests/: test_client.py
search/: search_index.json
src/pymmcore_plus/: __init__.py  _accumulator.py  _batcher.py  _benchmark.py  _build.py  _cli.py  _config.py  _discovery.py  _docs_plugin.py  _ipy_completion.py  _logger.py  _mock_sample.py  _old_config.py  _old_model.py  _pymmcore.py  _scope_model.py  _util.py  _version.py  install.py  mocks.py  model.py  seq_tester.py  structs.py
tests/: __init__.py  conftest.py  local_config.cfg  test_accumulators.py  test_adapter_class.py  test_adapter_name_mismatch.py  test_async_callback_issues.py  test_batcher.py  test_bench.py  test_change_accumulators.py  test_cli.py  test_config_group_class.py  test_core.py  test_core_references.py  test_device_class.py  test_dispatch.py  test_events.py  test_install.py  test_ipy_completions.py  test_mda.py  test_mda_ome.py  test_mda_output.py  test_mda_status.py  test_metadata.py  test_metadata_to_ome.py  test_misc.py  test_mock_sample.py  test_model.py  test_multicam_save.py  test_old_model.py  test_pixel_config_class.py  test_property_class.py  test_sequencing.py  test_simulate.py  test_slm_image.py  test_stage_signal.py  test_thread_relay.py  test_unicore.py
tests/00_unicore/: test_adapter_discovery.py  test_camera.py  test_pydevice_config.py  test_sequence_buffer.py  test_shutter.py  test_slm.py  test_state.py  test_unicore.py  test_xy_stage.py  test_z_stage.py
tests/handlers/: test_ome_zarr.py
tests/io/: test_image_sequence_writer.py  test_ome_tiff.py  test_ome_writers.py  test_ome_zarr.py  test_runner_handler.py  test_runner_handler_inference.py  test_zarr_writers.py
tests/remote/: test_client.py  test_serialize.py
tests/test_handlers/: test_image_sequence_writer.py  test_ome_tiff.py  test_ome_zarr.py  test_simple_tiff.py  test_tiff_series_writer.py
tests/unicore/: conftest.py  test_camera.py  test_sequence_buffer.py  test_shutter.py  test_slm.py  test_state.py  test_unicore.py  test_xy_stage.py
troubleshooting/: index.html
typings/pymmcore/: __init__.pyi
(+142 files in other folders)
