[metadata]
name = pymmcore-plus
author = Talley Lambert
author_email = talley.lambert@gmail.com
url = https://github.com/tlambert03/pymmcore-plus
download_url = https://github.com/tlambert03/pymmcore-plus
license = BSD License (BSD-3)
license_file = LICENSE
description = Control pymmcore (micro-manager) in another process
long_description = file: README.md
long_description_content_type = text/markdown
keywords = microscope, micro-manager, remote, multi-processing
project_urls =
    Source = https://github.com/tlambert03/pymmcore-plus
    Tracker = https://github.com/tlambert03/pymmcore-plus/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers

[options]
packages = pymmcore_plus
install_requires =
    pymmcore
    Pyro5>=5.10
    msgpack
    loguru
    numpy
    psutil

[options.extras_require]
pyqt5 =
    qtpy
    PyQt5
pyside2 =
    qtpy
    PySide2
qt =
    %(pyqt5)s
testing =
    pytest
    pytest-qt
    pytest-cov
    %(pyqt5)s
    useq-schema @ git+https://github.com/tlambert03/useq-schema.git

[tool:pytest]
addopts = -W error

[isort]
profile = black
src_paths=pymmcore_plus

[flake8]
exclude = _version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503, E203
