[metadata]
name = pymmcore_plus
description = Control pymmcore (micro-manager) in another process
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/pymmcore-plus
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Utilities
download_url = https://github.com/tlambert03/pymmcore-plus
keywords = microscope, micro-manager, remote, multi-processing
project_urls =
    Source = https://github.com/tlambert03/pymmcore-plus
    Tracker = https://github.com/tlambert03/pymmcore-plus/issues

[options]
packages = pymmcore_plus
install_requires =
    Pyro5>=5.10
    loguru
    msgpack
    numpy
    psutil
    pymmcore
    typing-extensions
    useq-schema
python_requires = >=3.8

[options.entry_points]
console_scripts =
    mmcp = pymmcore_plus._cli:main

[options.extras_require]
pyqt5 =
    PyQt5
    qtpy
pyside2 =
    PySide2
    qtpy
testing =
    PyQt5
    pytest
    pytest-cov
    pytest-qt
    qtpy

[tool:pytest]
addopts = -W error

[isort]
profile = black
src_paths = pymmcore_plus

[flake8]
exclude = _version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E203
