[metadata]
name = pymmcore_plus
description = Control pymmcore (micro-manager) in another process
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/pymmcore-plus
author = Talley Lambert, Ian Hunt-Isaak
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Utilities
download_url = https://github.com/tlambert03/pymmcore-plus
keywords = microscope, micro-manager, remote, multi-processing
project_urls =
    Source = https://github.com/tlambert03/pymmcore-plus
    Tracker = https://github.com/tlambert03/pymmcore-plus/issues

[options]
packages = find:
install_requires =
    loguru
    numpy
    psygnal
    pymmcore>=10.1.1.70.4
    typing-extensions
    useq-schema
    wrapt
python_requires = >=3.8

[options.extras_require]
docs =
    Sphinx>=1.5
    furo
    myst-nb
    sphinx-copybutton
    sphinx-panels
    sphinx-togglebutton
remote =
    Pyro5>=5.10
    msgpack
    psutil
testing =
    PySide2
    pytest
    pytest-cov
    pytest-qt
    qtpy
    tifffile

[options.package_data]
* = *.pyi, py.typed

[tool:pytest]
addopts = -W error

[isort]
profile = black
src_paths = pymmcore_plus

[flake8]
exclude = _version.py,.eggs,examples,*.pyi
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E203

[coverage:run]
omit = *_tests*,*/install.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
